# server/doc/apidoc.yaml
@@ -1,6 +1,6 @@
 openapi: 3.0.3
 info:
-  title: Title
+  title: MyCodingChallengeApi
   description: api document for coding challenge tools
   version: 1.0.0
   contact:
@@ -43,10 +43,8 @@ paths:
           description: Distance to foodTruck to be included in the results.
           schema:
             type: string
-            enum:
-              - meters
-              - kilometers
-              - miles
+            enum: [meters,kilometers,miles]
+            example: kilometers
       responses:
         '200':
           description: 'OK'
@@ -57,6 +55,7 @@ paths:
                 properties:
                   'type':
                     type: string
+                    example: FeatureCollection
                   features:
                     type: array
                     items:
@@ -64,15 +63,18 @@ paths:
                       properties:
                         'type':
                           type: string
+                          example: Feature
                         geometry:
                           type: object
                           properties:
                             type:
                               type: string
+                              example: Point
                             coordinates:
                               type: array
                               items:
                                 type: number
+                                example: [-122.42730642251331,37.76201920035647]
         '400':
           description: 'Bad request'
           content:
